--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "nguyenthixuanhong/nguyenthixuanhong.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Xuan Hong"
+  name             : "Nguyen Thi Xuan Hong"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Hanoi"
@@ -120,7 +120,7 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  hide                   : false     # change to true to hide the RSS feed in the footer
+  hide                   : true    # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
 
 
