--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Nguyen Thi Xuan Hong"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Small changes have a big impact than good idea that never happens"
   location         : "Hanoi"
   employer         : "Techcombank"
   uri              : # URL
