--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Nguyen Thi Xuan Hong"
   pronouns         : # example: "she/her"  
   bio              : "Small changes have a big impact than good idea that never happens"
-  location         : "Hanoi"
+  location         : "Hanoi, Vietnam"
   employer         : "Techcombank"
   uri              : # URL
   email            : "xuanhongg00@gmail.com"
